# Jamal

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
src/editor/: CodeEditor.cpp  CodeEditor.h  JamlTokeniser.cpp  JamlTokeniser.h  TextView.cpp  TextView.h  TokenHighlighter.h
src/editor/analyser/: XmlAnalyser.cpp  XmlAnalyser.h
src/editor/analyser/message/: MessageOpenDocument.cpp  MessageOpenDocument.h
src/editor/render/: ITextDecorationRenderer.h  SquiggleRenderer.h  TextDecorationRenderMode.h  TextViewLayout.cpp  TextViewLayout.h
src/editor/syntax/: ITokenProxy.h  JamlTokenList.h  JamlTokeniser.cpp  JamlTokeniser.h  JamlTokeniserUtils.cpp  JamlTokeniserUtils.h  SyntaxTree.cpp  SyntaxTree.h  TokenIterator.cpp  TokenIterator.h
src/editor/syntax/proxies/: ProxyCDataBlock.cpp  ProxyCDataBlock.h  ProxyEntity.cpp  ProxyEntity.h  ProxyLiteral.cpp  ProxyLiteral.h  ProxyOperator.cpp  ProxyOperator.h  ProxyTagOperator.cpp  ProxyTagOperator.h  ProxyText.cpp  ProxyText.h
src/editor/syntax/textmate/: TextMateCache.cpp  TextMateCache.h  TextMateGrammar.h  TextMateParser.cpp  TextMateParser.h
